promoted NodePanelHelper to ../PanelHelper